# whyred

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
content/: cube.fbx  monkey.fbx  plane.fbx  sphere.fbx
shaders/: base.frag.glsl  base.vert.glsl  shadow.frag.glsl  shadow.vert.glsl
sources/: application.cpp  application.hpp  camera_controller.cpp  camera_controller.hpp  main.cpp  ui.hpp  utils.cpp  utils.hpp
sources/render/: base_pass.cpp  base_pass.hpp  camera.cpp  camera.hpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.hpp  shadow_pass.cpp  shadow_pass.hpp  transform.cpp  transform.hpp  uniforms.hpp
sources/utils/: defer.hpp  fs.cpp  fs.hpp  math.hpp  pool.hpp
